- Added controllerLR.c.  This is code to run an IOP at 32K, as required by PEM Mid IOC over long fiber.  This in invoked by:
	- Set rate=32K in IOP model Parameter Block
	- Set virtualIOP=3 in IOP model Parameter Block
	- NOTE: Presently, this only reads ADC modules ie not DAC writes, as it was implemented for PEM DAQ channel.s
- Add installer support for kamioka,indigo,anu,uwa,cardiff,bham sites
==================================================================================================
Changes for 3.4.5
==================================================================================================
- Bug Fix (1133) - Fix cdsEzCaRead/Write implementation 
- Bug Fix (1132) - Increase ADC parser part limit to 6000
==================================================================================================
Changes for 3.4.3
==================================================================================================
- Changed PCIe real-time network configuration from single Dolphin channel to 2 Dolphin channels
  to avoid end station local traffic being sent back to long range PCIe network switch:
	- Local traffic (PCIE IPC) via channel 0
        - Long range traffic (RFM0/RFM1) via channel 1
- Bug Fix: Move rearming of ADC Demand DMA in IOP models from as ADC data is read in to after
  call to feCode(), IOP model code. Found that there was bus contention issues if IOP model was
  sending PCIe IPC at 65K.
- Added TIME_MASTER option for IOP models.
	- IOP will send GPS time and cycle via PCIe network to sync other computers.
- Added support for IOP that has no IOC ie synchronized by TIME_MASTER via PCIe network.
==================================================================================================
Changes for 3.4.2.1
- Bug Fix for Bit2Word.pm as per FRS 11066.
==================================================================================================